--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
       <div class="rounded-3xl cta-gradient p-8 md:p-12 text-center relative overflow-hidden shadow-[0_0_40px_rgba(30,64,175,0.4)]">
         <div class="absolute inset-0 opacity-10 bg-white"></div>
         <div class="relative">
-          <h2 class="text-2xl sm:text-3xl lg:text-4xl font-bold text-white">Успей зарегистрироваться до конца февраля и получи полный доступ без ограничений</h2>
+          <h2 class="text-2xl sm:text-3xl lg:text-4xl font-bold text-white">Успей зарегистрироваться до конца <span id="current-month-genitive"></span> и получи полный доступ без ограничений</h2>
           <div class="mt-6 flex justify-center">
             <a href="https://artemiy50-cmyk.github.io/3d-print-app/" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center h-14 px-10 rounded-xl font-semibold bg-white text-accent hover:bg-slate-100 transition shadow-lg">
               Зарегистрироваться
@@ -550,6 +550,11 @@
 
     // Текущий год в копирайте
     document.getElementById('copyright-year').textContent = new Date().getFullYear();
+
+    // Месяц в родительном падеже (до конца января, февраля, марта...)
+    const monthsGenitive = ['января', 'февраля', 'марта', 'апреля', 'мая', 'июня', 'июля', 'августа', 'сентября', 'октября', 'ноября', 'декабря'];
+    const currentMonth = new Date().getMonth();
+    document.getElementById('current-month-genitive').textContent = monthsGenitive[currentMonth];
 
     // Анимация fade-in-up при скролле
     const fadeEls = document.querySelectorAll('.fade-in-up');
